objects/privacycenter__RTBF_Request__c.object
<CustomObject>
    <fields>
        <fullName>privacycenter__Policy_Name__c</fullName>
        <label>Policy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Record_for_Deletion__c</fullName>
        <inlineHelpText>This value is the Id for the Parent Object from the selected RTBF Policy.</inlineHelpText>
        <label>Record for Deletion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Response_Message__c</fullName>
        <label>Response Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RTBF Request</label>
    <listViews>
        <fullName>privacycenter__All</fullName>
        <columns>NAME</columns>
        <columns>privacycenter__Status__c</columns>
        <columns>privacycenter__Policy_Name__c</columns>
        <columns>privacycenter__Record_for_Deletion__c</columns>
        <columns>privacycenter__Response_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RTBF-{000000}</displayFormat>
        <label>RTBF Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTBF Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>